@@ -1,7 +1,7 @@
 #
 # Copyright (c) 1996, 1997, 1998, 1999
 #             Shigio Yamaguchi. All rights reserved.
-# Copyright (c) 1999, 2000, 2001
+# Copyright (c) 1999, 2000, 2001, 2002
 #             Tama Communications Corporation. All rights reserved.
 #
 # This file is part of GNU GLOBAL.
@@ -28,7 +28,7 @@
 @HEADER	GCTAGS,1,December 2001,GNU Project
 @NAME	gctags - print cross reference list for gtags.
 @SYNOPSIS
-	@name{gctags} [-benrsw] @arg{file} ...
+	@name{gctags} [-benrsvw] @arg{file} ...
 @DESCRIPTION
 	@name{Gctags} print cross reference list for @xref{gtags,1}
 	from the specified C, C++, YACC, JAVA and assembler source
@@ -76,8 +76,12 @@
 	@item{@option{-s}, @option{--symbol}}
 		Collect symbols other than functions.
 		By default, locate function definitions.
+	@item{@option{-v}, @option{--verbose}}
+		Verbose mode.
 	@item{@option{-w}, @option{--warning}}
 		Print warning message.
+	@item{@option{--langmap}=map}
+		Specify language mapping. Default mapping is 'c:.c.h,yacc:.y,asm:.s.S,java:.java,cpp:.c++.cc.cpp.cxx.hxx.C.H'.
 	@end_itemize
 
 	The @option{-r} and @option{-s} options override each other;
